--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "task_management_application_backend",
-  "version": "1.0.0",
-  "description": "Create the Back for task management application",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+	"name": "task_management_application_backend",
+	"version": "1.0.0",
+	"description": "Create the Back for task management application",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon server.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^3.0.2",
+		"cors": "^2.8.5",
+		"dotenv": "^16.5.0",
+		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.13.2"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.9"
+	}
 }
