--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/taskdb
+MONGO_URI=mongodb+srv://alishahdsu:admin123@taskcluster.5dcuoba.mongodb.net/
 JWT_SECRET=jwttokenfordemo
